--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,10 +1,38 @@
-td, th, tr, h1, h3, a, div, form{
+
+td, th, span, tr, h1, h3, div, form{
 	color: grey;
 	font-family: arial;
 	text-align: center;
 }
 
+#submit{
+	padding-left: 45%;
+	padding-right: 45%;
+}
+
+#rev-table{
+	padding-top: 400px;
+}
+
+#location, #review{
+	padding-left: 30%;
+	padding-right: 30%;
+}
+
+#container{
+	padding-top: 100px;
+}
+
+.navbar-light .navbar-brand {
+    color: rgba(0,0,0,.9);
+}
+
+#page-title{
+	margin-top: 150px;
+}
+/*
 table{
 	margin-left:auto; 
 	margin-right:auto;
 }
+*/
