--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,22 +1,34 @@
+<h1 id="page-title">Reviews</h1>
 <form method="GET">
 	Location:
 	<input type="text" name="semester">
 	User:
 	<input type="text" name="year">
+	Rating:
+	<input type="number" name="year">
 	<input type="submit" value="Submit">
 </form>
-<table>
+
+
+
+
+<table id="rev-table" class="table">
+  <thead>
+    <tr>
+      <th scope="col">Shop Name</th>
+      <th scope="col">Author</th>
+      <th scope="col">Rating</th>
+      <th scope="col">Review</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each rev as |r|}}
 	<tr>
-		<th>Location</th>
-		<th>Name</th>
-		<th>Rating</th>
-	</tr>
-	{{#each rev as |r|}}
-	<tr>
-		<td>{{r.location}}</td>
-		<td>{{r.location.name}}</td>
-		<td>{{r.rating}}</td>
+		<td scope="row">{{r.location}}</td>
+		<td>{{r.username}}</td>	
+		<td>{{r.rating}}</td>	
+		<td>{{r.review}}</td>
 	</tr>
 	{{/each}}
+  </tbody>
 </table>
-
