fixed login errors

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,5 +1,5 @@
 
-td, th, span, tr, h1, h3, div, form{
+td, th, span, tr, h1, h3, h2, div, form{
 	color: grey;
 	font-family: arial;
 	text-align: center;
