fixed login errors

--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -21,7 +21,7 @@
 		<div class="mx-auto order-0">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href={{path}}>Write A Review</a>
+					<a class="nav-link" href={{path}}>Write a Review</a>
 				</li>
 			</ul>
     	</div>
