--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,11 +1,11 @@
 <h1 id="page-title">Register</h1>
-<h2>{{message}}</h2>
-<form  method="POST">
+<h2 id='messageReg'>{{message}}</h2>
+<form  id='registerForm' method="POST">
 	Username:
-	<input type="text" name="username">
+	<input id='username' type="text" name="username">
 	Password:
-	<input type="password" name="password">
+	<input id='password' type="password" name="password">
     Email Address:
-	<input type="text" name="email">
-	<input type="submit" value="Submit">
+	<input id='email' type="text" name="email">
+	<input id='registerSubmit' type="submit" value="Submit">
 </form>
