--- a/src/views/location.hbs
+++ b/src/views/location.hbs
@@ -1,1 +1,5 @@
-<h1 style="padding-top: 400px">{{location}}</h1>
+
+{{#each rev as |r|}}
+<h1 style="padding-top: 400px">{{r.location}}</h1>
+
+{{/each}}
