--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -8,7 +8,7 @@
 	<title></title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src={{source}}></script>
+	
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 			<ul class="navbar-nav ml-auto">
 				{{#if username}}
 				<li class="nav-item">
-					Welcome, {{username}}
+					Welcome, {{{username}}}
 				</li>
 				{{else}}
 				<li class="nav-item">
@@ -49,7 +49,7 @@
 
 	{{{body}}}
 
-
+	<script src={{source}}></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
