--- a/src/views/write.hbs
+++ b/src/views/write.hbs
@@ -1,28 +1,33 @@
 <h1 id="page-title" >Write a review, {{username}}</h1>
-<h2>{{message}}</h2>
+<h2 id='messageWrite'>{{message}}</h2>
 
 
 <div id="container" class="container">
     <div class="info-form">
-        <form action="" method="POST" class="justify-content-center">
-            <div id="location" class="form-group col align-self-center">
+        <form id='reviewForm' action="" method="POST" class="justify-content-center">
+            <div id="loc" class="form-group col align-self-center">
                 <label >Location Name</label>
                 <input type="text" name='location' required="true" class="form-control"  placeholder="Name">
             </div>
-            <div id="location" class="form-group col align-self-center">
+            <div id="loc" class="form-group col align-self-center">
                 <label >Rating</label>
                 <input type="number" name='rating' required="true" class="form-control"  >
             </div>
             <div id='review' class="form-group col align-self-center">
                 <label >Review</label>
-                <textarea type="text" name='review' required="true" class="form-control"  placeholder="thoughts?"></textarea>
+                <textarea id='revArea' type="text" name='review' required="true" class="form-control"  placeholder="thoughts?"></textarea>
             </div>
             <div id='submit' class="form-group col align-self-center">
-                <input type="submit" class="form-control" value="Submit">
+                <input id='submitBtn' type="submit" class="form-control" value="Submit">
             </div>
         </form>
     </div>
 </div>
 
+<!--
+<script>
+    console.log("in the 'write a review' page")
+</script>
+-->
 
 
