--- a/src/views/write.hbs
+++ b/src/views/write.hbs
@@ -10,6 +10,10 @@
                 <input type="text" name='location' required="true" class="form-control"  placeholder="Name">
             </div>
             <div id="loc" class="form-group col align-self-center">
+                <label>Address</label>
+                <input type="text" name='address' required="true" class="form-control"  placeholder="Name">
+            </div>
+            <div id="loc" class="form-group col align-self-center">
                 <label >Rating</label>
                 <input type="number" name='rating' required="true" class="form-control"  >
             </div>
