--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,6 @@
 <h1 id="page-title">Reviews</h1>
-<form method="GET">
+<h1 id='messageWrite'></h1>
+<form method="GET" id='filterForm'>
 	Location:
 	<input id='location' type="text" name="location">
 	User:
@@ -33,5 +34,6 @@
   </tbody>
 </table>
 
-<script>
-</script>
+<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
