--- a/src/views/write.hbs
+++ b/src/views/write.hbs
@@ -11,11 +11,77 @@
             </div>
             <div id="loc" class="form-group col align-self-center">
                 <label>Address</label>
-                <input type="text" name='address' required="true" class="form-control"  placeholder="Name">
+                <div class='row'>
+                    <div class='col'>
+                        <input type="text" name='address1' required="true" class="form-control" id='add1' placeholder="Address Line 1">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class='col'>
+                        <input type="text" name='address2' required="true" class="form-control"  id='add2' placeholder="City">
+                    </div>
+                    <div class="col">   <!-- https://gist.github.com/RichLogan/9903043 -->
+                        <select class="form-control" id="state" name="state" >
+                            <option value="">N/A</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AL">Alabama</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DC">District of Columbia</option>
+                            <option value="DE">Delaware</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="IA">Iowa</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MD">Maryland</option>
+                            <option value="ME">Maine</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MT">Montana</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NY">New York</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="PR">Puerto Rico</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VA">Virginia</option>
+                            <option value="VT">Vermont</option>
+                            <option value="WA">Washington</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WY">Wyoming</option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <div id="loc" class="form-group col align-self-center">
                 <label >Rating</label>
-                <input type="number" name='rating' required="true" class="form-control"  >
+                <input type="number" name='rating' required="true" class="form-control" min='1' max='5' >
             </div>
             <div id='review' class="form-group col align-self-center">
                 <label >Review</label>
