--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,12 +1,12 @@
 <h1 id="page-title">Reviews</h1>
-<h1 id='messageWrite'></h1>
+<h2 id='messageWrite'></h2>
 <form method="GET" id='filterForm'>
 	Location:
 	<input id='location' type="text" name="location">
 	User:
 	<input id='user' type="text" name="username">
 	Rating:
-	<input id='rating' type="number" name="rating">
+	<input id='rating' type="number" min='1' max='5' name="rating">
 	<input id='input' type="submit" value="Submit">
 </form>
 
