--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -31,7 +31,7 @@
 			<ul class="navbar-nav ml-auto">
 				{{#if username}}
 				<li class="nav-item">
-					Welcome, {{{username}}}
+					Welcome, {{username}}
 				</li>
 				{{else}}
 				<li class="nav-item">
