fixed issues with table sizing

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,7 +13,7 @@
 
 
 
-<table id="rev-table" align='center' class="table table-nonfluid">
+<table id="rev-table" align='center' class="table table-nonfluid table-bordered">
   <thead>
     <tr>
       <th scope="col">Shop Name</th>
