--- a/src/views/location.hbs
+++ b/src/views/location.hbs
@@ -4,7 +4,7 @@
 <div id="map"></div>
 <div id='ifErr'></div>
 <h1 id="loc-revs">Reviews</h1>
-<table id="rev-table-loc" align='center' class="table table-nonfluid">
+<table id="rev-table-loc" align='center' class="table table-nonfluid table-bordered">
   <thead>
     <tr>
       <th scope="col">Author</th>
